Update 4.1. Product Backlog

--- a/4.1.-Product-Backlog.md
+++ b/4.1.-Product-Backlog.md
@@ -1,15 +1,29 @@
+# Product Backlog – Revista Ejército
 
 | **ID** | **Épica / Área Funcional** | **Historias de Usuario (HU)** | **Prioridad** | **Comentarios** |
-|--------|-----------------------------|-------------------------------|----------------|-----------------|
-| **PB-01** | **Gestión de Autores** | **HU.01 – Alta de Autor**<br>Registrar autores con sus datos, direcciones, documentos (DNI/CV) y datos bancarios. | **Alta (Sprint 1)** | Es la base del sistema: los autores se vinculan a artículos y pueden ser remunerables. |
-| **PB-02** | **Gestión de Artículos** | **HU.02 – Alta de Artículo + subida de documentos**<br>**HU.03 – Cambiar estado de Artículo**<br>**HU.04 – Clasificar artículo (tipo/temática/sección)** | **Alta (Sprint 1)** | Define el ciclo de vida editorial: recepción, revisión, evaluación y clasificación. |
-| **PB-03** | **Consejeros y Evaluaciones** | **HU.05 – Alta de Consejero (siempre militar)**<br>**HU.06 – Asignar consejero(s) a Artículo**<br>**HU.07 – Registrar evaluación (nota, recomendación e informe)** | **Alta (Sprint 1)** | Permite la gestión de consejeros, asignación de revisores y evaluación de artículos. |
-| **PB-04** | **Números de Revista** | **HU.08 – Crear número de revista**<br>**HU.09 – Asignar/retirar artículos a un número (propuesta)**<br>**HU.10 – Publicar número de revista** | **Alta (Sprint 1)** | Consolidación editorial: planificación, propuesta y publicación de números. |
-| **PB-05** | **Búsqueda y Consultas del Editor** | **HU.11 – Búsqueda avanzada (artículos/autores/documentos)** | **Media (Sprint 2)** | Permite acceder rápidamente a la información y documentos asociados. |
-| **PB-06** | **Distribución a Autores** | **HU.12 – Etiqueta de envío a Autor (ejemplar publicado)** | **Media (Sprint 2)** | Generación de etiquetas de cortesía para autores de artículos publicados. |
-| **PB-07** | **Gestión de Suscriptores y Suscripciones** | **HU.13 – Alta de Suscriptor y Suscripción**<br>**HU.14 – Gestionar Pagador (distinto del suscriptor)**<br>**HU.15 – Modificar Suscripción (datos y estados)** | **Media (Sprint 2)** | Administración completa del ciclo de suscripciones y pagadores. |
-| **PB-08** | **Distribución Física de Ejemplares** | **HU.16 – Generar etiquetas de envío (número PUBLICADO)**<br>**HU.17 – Exportar etiquetas (PDF/XLS)**<br>**HU.18 – Consulta de suscriptores/suscripciones/direcciones** | **Media (Sprint 2)** | Preparación y exportación de lotes de envío postal de ejemplares físicos. |
-| **PB-09** | **Gestión Económica de Pagos** | **HU.19 – Generar Certificado de Pago a Autor**<br>**HU.20 – Exportar Certificado de Pago** | **Media (Sprint 3)** | Permite remunerar a los autores de artículos publicados y generar documentación fiscal. |
-| **PB-10** | **Dirección – Control Editorial** | **HU.21 – Monitorizar números de revista (estado y capacidad)**<br>**HU.22 – Histórico y observaciones de artículos** | **Media (Sprint 3)** | Seguimiento y trazabilidad completa del proceso editorial. |
-| **PB-11** | **Dirección – Búsquedas y Estadísticas** | **HU.23 – Búsqueda de artículos (Dirección)**<br>**HU.24 – Búsqueda de autores (Dirección)**<br>**HU.25 – Búsqueda de números de revista (Dirección)**<br>**HU.26 – Informes y estadísticas (panel)**<br>**HU.27 – Exportación de listados (autorizados)** | **Media (Sprint 3)** | Análisis estratégico mediante filtros, paneles y exportación de datos. |
-| **PB-12** | **Administración de Usuarios y Roles** | **HU.28 – Alta de Usuario (Administración)**<br>**HU.29 – Asignar roles a usuario**<br>**HU.30 – Editar usuario**<br>**HU.31 – Desactivar usuario (baja)**<br>**HU.32 – Consulta de usuarios y roles** | **Baja (Sprint 4)** | Administración de accesos a la plataforma (DICODEF), gestión de roles y auditoría. |
+|--------|-----------------------------|--------------------------------|----------------|-----------------|
+| **PB-01** | **Gestión de Autores** | **HU.01 – Alta de Autor**<br>Registrar autores con sus datos personales, direcciones, documentos (DNI/CV), perfil militar y datos bancarios. | **Alta (Sprint 1)** | Base del sistema: los autores se vinculan a artículos y pueden ser remunerables. Incluye buscador y ficha con artículos asociados. |
+| **PB-02** | **Gestión de Artículos** | **HU.02 – Alta de Artículo + subida de documentos**<br>**HU.03 – Cambiar estado de Artículo**<br>**HU.04 – Clasificar artículo (tipo/temática/sección)** | **Alta (Sprint 1)** | Define el ciclo de vida editorial: recepción, revisión, evaluación y clasificación. Incluye flujo de estados, control de versiones y medidas de extensión. |
+| **PB-03** | **Consejeros y Evaluaciones** | **HU.05 – Alta de Consejero (siempre militar)**<br>**HU.06 – Asignar consejero(s) a Artículo**<br>**HU.07 – Registrar evaluación (nota, recomendación e informe)** | **Alta (Sprint 1)** | Permite registrar consejeros, asignar evaluadores a artículos, registrar evaluaciones e informes y controlar el paso a “Evaluado”. |
+| **PB-04** | **Números de Revista** | **HU.08 – Crear número de revista**<br>**HU.09 – Asignar/retirar artículos a un número (propuesta)**<br>**HU.10 – Publicar número de revista** | **Alta (Sprint 1)** | Consolidación editorial: planificación, propuesta y publicación de números de revista. Incluye control de duplicados, validaciones y estados. |
+| **PB-05** | **Búsqueda y Consultas del Editor** | **HU.11 – Búsqueda avanzada (artículos/autores/documentos)** | **Media (Sprint 2)** | Permite al editor acceder rápidamente a artículos, autores y documentos mediante múltiples filtros y descargas. |
+| **PB-06** | **Distribución a Autores** | **HU.12 – Etiqueta de envío a Autor (ejemplar publicado)** | **Media (Sprint 2)** | Generación de etiquetas de cortesía para autores con artículos publicados. Integrado con los datos de dirección y número de revista. |
+| **PB-07** | **Gestión de Suscriptores y Suscripciones** | **HU.13 – Alta de Suscriptor y Suscripción**<br>**HU.14 – Gestionar Pagador (distinto del suscriptor)**<br>**HU.15 – Modificar Suscripción (datos y estados)** | **Media (Sprint 2)** | Administración completa de suscriptores, suscripciones, pagadores y direcciones postales. Control de estados y periodos activos. |
+| **PB-08** | **Distribución Física de Ejemplares** | **HU.16 – Generar etiquetas de envío (número PUBLICADO)**<br>**HU.17 – Exportar etiquetas (PDF/XLS)**<br>**HU.18 – Consulta de suscriptores/suscripciones/direcciones** | **Media (Sprint 2)** | Preparación, configuración y exportación de lotes de envío postal para suscripciones activas. |
+| **PB-09** | **Gestión Económica de Pagos** | **HU.19 – Generar Certificado de Pago a Autor**<br>**HU.20 – Exportar Certificado de Pago** | **Media (Sprint 3)** | Permite generar certificados de pago para autores de artículos publicados, aplicando retenciones y exportando los datos a PDF/XLS. |
+| **PB-10** | **Dirección – Control Editorial** | **HU.21 – Monitorizar números de revista (estado y capacidad)**<br>**HU.22 – Histórico y observaciones de artículos** | **Media (Sprint 3)** | Seguimiento de estados, capacidad de número y trazabilidad del proceso editorial con observaciones. |
+| **PB-11** | **Dirección – Búsquedas y Estadísticas** | **HU.23 – Búsqueda de artículos (Dirección)**<br>**HU.24 – Búsqueda de autores (Dirección)**<br>**HU.25 – Búsqueda de números de revista (Dirección)**<br>**HU.26 – Informes y estadísticas (panel)**<br>**HU.27 – Exportación de listados (autorizados)** | **Media (Sprint 3)** | Herramientas de análisis y reporting: filtros combinados, KPIs, paneles de control y exportación de datos. |
+| **PB-12** | **Administración de Usuarios y Roles** | **HU.28 – Alta de Usuario (Administración)**<br>**HU.29 – Asignar roles a usuario**<br>**HU.30 – Editar usuario**<br>**HU.31 – Desactivar usuario (baja)**<br>**HU.32 – Consulta de usuarios y roles** | **Baja (Sprint 4)** | Administración de accesos mediante credenciales DICODEF, asignación de roles, auditoría de altas/bajas y trazabilidad de permisos. |
+
+---
+
+## Distribución por Sprints
+
+| **Sprint** | **PBIs Incluidos** | **Total HU** | **Objetivo Principal** |
+|-------------|--------------------|---------------|------------------------|
+| **Sprint 1** | PB-01 → PB-04 | HU.01–HU.10 | Implementar núcleo editorial: autores, artículos, evaluaciones y números. |
+| **Sprint 2** | PB-05 → PB-08 | HU.11–HU.18 | Extender la gestión editorial con búsquedas, suscripciones y distribución. |
+| **Sprint 3** | PB-09 → PB-11 | HU.19–HU.27 | Incorporar gestión económica, control de dirección y estadísticas. |
+| **Sprint 4** | PB-12 | HU.28–HU.32 | Administración completa de usuarios, roles y auditoría. |
+
+
