Logos de alternativas.

--- a/2.4.-Estudio-de-Alternativas.md
+++ b/2.4.-Estudio-de-Alternativas.md
@@ -2,6 +2,8 @@
 
 Plataforma SaaS especializada en la gestión de **editoriales y revistas**, que cubre suscripciones, publicidad, distribución y reporting. Orientada a medios profesionales.
 
+![](Imágenes/Maghub_Logo.png)
+
 * **Tipo de licencia**: Propietaria, modelo SaaS (cloud).
 * **Costes**:
 
@@ -38,6 +40,8 @@ Plataforma SaaS especializada en la gestión de **editoriales y revistas**, que 
 ## 2. OJS (Open Journal Systems – Open Source)
 
 Plataforma open source para la gestión y publicación de revistas científicas. Utilizada por instituciones académicas.
+
+![](Imágenes/OJS_Logo.png)
 
 * **Tipo de licencia**: Open Source (GPL v2).
 * **Costes**:
