Update 4.2. Historias de Usuarios

--- a/4.2.-Historias-de-Usuarios.md
+++ b/4.2.-Historias-de-Usuarios.md
@@ -48,7 +48,7 @@
 
 ---
 
-## HU.04 – Clasificar artículo (tipo/temática/sección)
+## HU.04 – Clasificar artículo (Artículo/Sección Fija)
 
 **Como**: Editor
 **Quiero**: mantener los atributos de clasificación del artículo
@@ -56,7 +56,7 @@
 
 **DoD**
 
-* Edición de **tipo**, **temática** y **sección**.
+* Edición de **tipo**, y **sección**.
 * La clasificación se refleja en filtros de búsqueda y en la propuesta de número.
 
 ---
