Update 4.2. Historias de Usuarios

--- a/4.2.-Historias-de-Usuarios.md
+++ b/4.2.-Historias-de-Usuarios.md
@@ -324,29 +324,27 @@
 ## HU.23 – Búsqueda de artículos (Dirección)
 
 **Como**: Dirección
-**Quiero**: buscar artículos por **título, autor, estado, temática, sección y fechas**
+**Quiero**: buscar artículos por **título, autor, estado, sección y fechas**
 **Para**: acceder rápidamente a la información requerida
 
 **DoD**
 
-* Búsqueda combinando **múltiples filtros** y texto libre.
+* Búsqueda de texto libre.
 * Resultados **paginados** con columnas configurables.
 * Acceso directo a detalle de artículo y descarga de documentos permitidos.
-* Posibilidad de **exportar** resultados (XLS/CSV) si el perfil lo autoriza.
 
 ---
 
 ## HU.24 – Búsqueda de autores (Dirección)
 
 **Como**: Dirección
-**Quiero**: buscar autores por **nombre, unidad/perfil militar, producción**
+**Quiero**: buscar autores por **nombre, email, teléfono, etc**
 **Para**: analizar contribuciones y localizar datos de contacto
 
 **DoD**
 
-* Filtros por nombre, email, perfil militar, nº de artículos, estado de publicaciones.
+* Filtros de texto libre.
 * Acceso a ficha de autor y a su lista de artículos.
-* Exportación **XLS/CSV** bajo permisos.
 
 ---
 
@@ -375,10 +373,10 @@
 * KPIs mínimos:
 
   * Tiempo medio por fase (**recepción→evaluación→propuesta→publicación**).
-  * Nº artículos por estado y por temática.
-  * Nº evaluaciones pendientes / fuera de plazo.
+  * Nº artículos por estado y por sección.
+  * Nº evaluaciones pendientes / realizadas.
   * Suscripciones activas/suspendidas/vencidas y **ejemplares** por lote.
-* Filtros por periodo y exportación a **PDF** (captura del panel).
+* Filtros por periodo.
 
 ---
 
@@ -400,13 +398,13 @@
 
 **Como**: Administrador
 **Quiero**: dar de alta usuarios en la aplicación
-**Para**: habilitar su acceso (vía infraestructura DICODEF)
+**Para**: habilitar su acceso (vía infraestructura BBDD/DICODEF)
 
 **DoD**
 
 * Formulario con datos mínimos: nombre, email institucional, **identificador DICODEF**.
 * Validaciones de unicidad por email/identificador.
-* Estado inicial **ALTA**; sin gestión de recuperación de credenciales (externo a la app).
+* Estado inicial **ALTA**, con gestión de recuperación de credenciales (para usuarios de BBDD).
 * Registro en **auditoría** (quién dio de alta, cuándo).
 
 ---
@@ -434,7 +432,7 @@
 **DoD**
 
 * Editables: nombre, email institucional, estado (**ALTA / BAJA**), observaciones.
-* No se gestiona contraseña (dependencia DICODEF).
+* No se gestiona contraseña para usuarios DICODEF.
 * Auditoría de edición.
 
 ---
