--- a/2.4.-Estudio-de-Alternativas.md
+++ b/2.4.-Estudio-de-Alternativas.md
@@ -12,6 +12,9 @@ Plataforma SaaS especializada en la gestión de **editoriales y revistas**, que 
   * Costes adicionales por módulos avanzados (ej. publicidad).
 * **Tiempo de despliegue**: 1–2 meses (dependiendo de la migración de datos).
 * **Usabilidad**: Interfaz pensada para equipos editoriales. Baja curva de aprendizaje.
+
+![](Imágenes/Maghub.png)
+
 * **Funcionalidades**:
 
   * Gestión de suscripciones y distribución.
@@ -35,6 +38,8 @@ Plataforma SaaS especializada en la gestión de **editoriales y revistas**, que 
 * R2 → Posible / Impacto Alto
 * R3 → Posible / Impacto Moderado
 
+![](Imágenes/mapa_de_riesgos_MAGHUB.png)
+
 ---
 
 ## 2. OJS (Open Journal Systems – Open Source)
@@ -51,6 +56,9 @@ Plataforma open source para la gestión y publicación de revistas científicas.
   * Soporte opcional por terceros (PKP Publishing Services o consultoras).
 * **Tiempo de despliegue**: 1–3 meses con equipo técnico básico.
 * **Usabilidad**: Interfaz sencilla. Curva de aprendizaje media.
+
+![](Imágenes/OJS.png)
+
 * **Funcionalidades**:
 
   * Flujo editorial completo: envío, revisión, publicación online.
@@ -66,13 +74,15 @@ Plataforma open source para la gestión y publicación de revistas científicas.
 
   * R1: Dependencia de la comunidad para actualizaciones.
   * R2: Coste añadido en personalizaciones.
-  * R3: Falta de soporte oficial salvo servicios contratados.
+  * R3: Falta de soporte oficial salvo servicios contratados.  
 
 **Matriz de riesgos**:
 
 * R1 → Posible / Impacto Moderado
 * R2 → Probable / Impacto Alto
 * R3 → Posible / Impacto Moderado
+
+![](Imágenes/mapa_de_riesgos_OJS.png)
 
 ---
 
@@ -109,6 +119,8 @@ Aplicación a medida desarrollada internamente para soportar **gestión editoria
 * R1 → Posible / Impacto Alto
 * R2 → Posible / Impacto Alto
 * R3 → Posible / Impacto Moderado
+
+![](Imágenes/mapa_de_riesgos_NABU.png)
 
 ## Comparativa de Alternativas
 
