Imágenes Alternativas de desarrollo.

--- a/2.4.-Estudio-de-Alternativas.md
+++ b/2.4.-Estudio-de-Alternativas.md
@@ -13,7 +13,7 @@ Plataforma SaaS especializada en la gestión de **editoriales y revistas**, que 
 * **Tiempo de despliegue**: 1–2 meses (dependiendo de la migración de datos).
 * **Usabilidad**: Interfaz pensada para equipos editoriales. Baja curva de aprendizaje.
 
-![](Imágenes/Maghub.png)
+![](Imágenes/MagHub.png)
 
 * **Funcionalidades**:
 
@@ -90,6 +90,8 @@ Plataforma open source para la gestión y publicación de revistas científicas.
 
 Aplicación a medida desarrollada internamente para soportar **gestión editorial y distribución física de la**, cumpliendo con GDPR y necesidades específicas.
 
+![](Imágenes/Medusa_Logo.png)
+
 * **Tipo de licencia**: Propietaria interna (sin coste de licencias base).
 * **Costes**:
 
@@ -98,6 +100,9 @@ Aplicación a medida desarrollada internamente para soportar **gestión editoria
   * Infraestructura en servidores propios ya existentes.
 * **Tiempo de despliegue**: 2 meses para MVP funcional.
 * **Usabilidad**: Totalmente personalizable. Interfaz Angular + Bootstrap.
+
+![](Imágenes/NABU.png)
+
 * **Funcionalidades**:
 
   * Gestión completa de artículos, autores, consejeros y evaluaciones.
