Correccion de diagramas.

--- a/3.2.-Modelos-negocio-dominio.md
+++ b/3.2.-Modelos-negocio-dominio.md
@@ -1,3 +1,7 @@
 ## Modelo de Negocio
 
 ![](Diagramas/Diagrama_Negocio_V1.drawio.png)
+
+## Modelo de Dominio
+
+![](Diagramas/Modelo_de_Dominio_V2.drawio.png)
