Update 4.1. Product Backlog

--- a/4.1.-Product-Backlog.md
+++ b/4.1.-Product-Backlog.md
@@ -3,7 +3,7 @@
 | **ID** | **Épica / Área Funcional** | **Historias de Usuario (HU)** | **Prioridad** | **Comentarios** |
 |--------|-----------------------------|--------------------------------|----------------|-----------------|
 | **PB-01** | **Gestión de Autores** | **HU.01 – Alta de Autor**<br>Registrar autores con sus datos personales, direcciones, documentos (DNI/CV), perfil militar y datos bancarios. | **Alta (Sprint 1)** | Base del sistema: los autores se vinculan a artículos y pueden ser remunerables. Incluye buscador y ficha con artículos asociados. |
-| **PB-02** | **Gestión de Artículos** | **HU.02 – Alta de Artículo + subida de documentos**<br>**HU.03 – Cambiar estado de Artículo**<br>**HU.04 – Clasificar artículo (tipo/temática/sección)** | **Alta (Sprint 1)** | Define el ciclo de vida editorial: recepción, revisión, evaluación y clasificación. Incluye flujo de estados, control de versiones y medidas de extensión. |
+| **PB-02** | **Gestión de Artículos** | **HU.02 – Alta de Artículo + subida de documentos**<br>**HU.03 – Cambiar estado de Artículo**<br>**HU.04 – Clasificar artículo (tipo/sección)** | **Alta (Sprint 1)** | Define el ciclo de vida editorial: recepción, revisión, evaluación y clasificación. Incluye flujo de estados, control de versiones y medidas de extensión. |
 | **PB-03** | **Consejeros y Evaluaciones** | **HU.05 – Alta de Consejero (siempre militar)**<br>**HU.06 – Asignar consejero(s) a Artículo**<br>**HU.07 – Registrar evaluación (nota, recomendación e informe)** | **Alta (Sprint 1)** | Permite registrar consejeros, asignar evaluadores a artículos, registrar evaluaciones e informes y controlar el paso a “Evaluado”. |
 | **PB-04** | **Números de Revista** | **HU.08 – Crear número de revista**<br>**HU.09 – Asignar/retirar artículos a un número (propuesta)**<br>**HU.10 – Publicar número de revista** | **Alta (Sprint 1)** | Consolidación editorial: planificación, propuesta y publicación de números de revista. Incluye control de duplicados, validaciones y estados. |
 | **PB-05** | **Búsqueda y Consultas del Editor** | **HU.11 – Búsqueda avanzada (artículos/autores/documentos)** | **Media (Sprint 2)** | Permite al editor acceder rápidamente a artículos, autores y documentos mediante múltiples filtros y descargas. |
