Update 5.1. Sprint Planning

--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -27,7 +27,7 @@
 | 12 | Crear vista de detalle de artículo con documentos adjuntos | HU.02 | 08–11 | PBI-02 | 6 |
 | 13 | Implementar flujo de estados de artículos (Recibido → En revisión → Evaluado → Propuesto → Publicado/Archivado) | HU.03 | 08–12 | PBI-02 | 8 |
 | 14 | Validar transiciones de estado según reglas | HU.03 | 13 | PBI-02 | 6 |
-| 15 | Implementar clasificación de artículo (tipo/temática/sección) | HU.04 | 08 | PBI-02 | 6 |
+| 15 | Implementar clasificación de artículo (tipo/sección) | HU.04 | 08 | PBI-02 | 6 |
 
 **Total estimado PBI-02:** ≈ **52 h**
 
