Update 5.1. Sprint Planning

--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -23,7 +23,7 @@
 | 08 | Crear formulario de alta de artículo (título, tipo, temática, sección, fecha) | HU.02 | – | PBI-02 | 8 |
 | 09 | Implementar asociación de autores a artículos con orden de autoría | HU.02 | 01–08 | PBI-02 | 8 |
 | 10 | Añadir carga de manuscrito obligatorio (DOC/PDF) y anexos opcionales | HU.02 | 08 | PBI-02 | 6 |
-| 11 | Añadir campos manuales de medidas (palabras, caracteres, páginas) | HU.02 | 08 | PBI-02 | 4 |
+| 11 | Clasificación de artículos en Artículos/Sección Fija | HU.02 | 08 | PBI-02 | 4 |
 | 12 | Crear vista de detalle de artículo con documentos adjuntos | HU.02 | 08–11 | PBI-02 | 6 |
 | 13 | Implementar flujo de estados de artículos (Recibido → En revisión → Evaluado → Propuesto → Publicado/Archivado) | HU.03 | 08–12 | PBI-02 | 8 |
 | 14 | Validar transiciones de estado según reglas | HU.03 | 13 | PBI-02 | 6 |
