Update 2.5. Matriz de cumplimiento

--- a/2.5.-Matriz-de-cumplimiento.md
+++ b/2.5.-Matriz-de-cumplimiento.md
@@ -1,28 +1,39 @@
 # Cobertura de Historias de Usuario
 
-| Historia de Usuario                                      | OJS (Open Source)                                      | MagHub (Comercial)                            | Desarrollo Propio                                  |
-| -------------------------------------------------------- | ------------------------------------------------------ | --------------------------------------------- | -------------------------------------------------- |
-| **HU.01 Autor + docs bancarios (CV/DNI)**                | ✓ (perfil + adjuntos; faltan bancarios)                | ~ (CRM con adjuntos; no modela bancarios)     | ✓ (datos civiles/militares + docs bancarios)       |
-| **HU.02 Artículo + autores + documentos**                | ✓ (múltiples autores/ficheros; metadatos)              | ~ (gestión contenidos; no académico puro)     | ✓ (ficheros con preservación de tipo y orden)      |
-| **HU.03 Estados de artículo (ciclo completo)**           | ✓ (workflow configurable: recibido→revisado→publicado) | ~ (workflow tareas/editorial; no científico)  | ✓ (ciclo de estados trazable, configurable)        |
-| **HU.04 Clasificación artículo (tipo/temática/sección)** | ✓ (secciones, palabras clave, categorías)              | ✓ (metadatos de contenido configurables)      | ✓ (tipos, secciones y temáticas definidas)         |
-| **HU.05 Alta de consejeros (militares)**                 | ✓ (usuarios revisores; no modela perfil militar)       | ~ (roles editoriales genéricos)               | ✓ (perfil militar obligatorio, modelado explícito) |
-| **HU.06 Asignación consejeros a artículos**              | ✓ (gestión de revisores)                               | ~ (workflows de asignación de tareas)         | ✓ (asignación explícita con roles militares)       |
-| **HU.07 Registrar evaluaciones + informe**               | ✓ (formulario revisión + adjuntos)                     | ~ (se modela como feedback/tarea)             | ✓ (evaluación con nota, recomendación + adjunto)   |
-| **HU.08 Crear números de revista**                       | ✓ (issues y publicación online)                        | ✓ (flatplanning + números ediciones)          | ✓ (número de revista con control de páginas)       |
-| **HU.09 Asignar artículos a número de revista**          | ✓ (asociación artículo - issue)                        | ✓ (planificación de páginas)                  | ✓ (asignación con validación de páginas)           |
-| **HU.10 Publicar número de revista**                     | ✓ (cambio estado a publicado)                          | ✓ (workflow publicación)                      | ✓ (bloqueo edición tras publicación)               |
-| **HU.11 Consultas avanzadas artículos/autores**          | ✓ (filtros avanzados, DOIs, keywords)                  | ✓ (listados/exportaciones CRM)                | ✓ (búsqueda multi-criterio en frontend)            |
-| **HU.12 Etiquetas de envío a autores**                   | ~ (plugins externos; orientado a digital)              | ✓ (módulos de circulación con etiquetas)      | ✓ (PDF/XLS integrado para envíos físicos)          |
-| **HU.13 Alta suscriptores + suscripciones**              | ~ (usuarios para acceso digital, no físico)            | ✓ (gestión completa de suscriptores)          | ✓ (suscriptor civil/militar con direcciones)       |
-| **HU.14 Pagador distinto de suscriptor**                 | ~ (requiere personalización)                           | ✓ (modela distintos contactos/pagadores)      | ✓ (entidad pagador separada de suscriptor)         |
-| **HU.15 Estados de suscripción**                         | ~ (enfocado a acceso online, sin logística)            | ✓ (activa, suspendida, cancelada)             | ✓ (activa, suspendida, vencida)                    |
-| **HU.16 Generar etiquetas suscriptores**                 | ~ (no nativo; requiere plugin)                         | ✓ (exportación estándar de etiquetas)         | ✓ (PDF/XLS integrado con direcciones múltiples)    |
-| **HU.17 Exportar etiquetas PDF/XLS**                     | ~ (plugin o módulo extra)                              | ✓ (plantillas listas)                         | ✓ (generación configurable en backend)             |
-| **HU.18 Consulta de suscriptores/suscripciones**         | ~ (consultas básicas de usuarios online)               | ✓ (consultas y listados de circulación)       | ✓ (consultas detalladas con filtros y auditoría)   |
-| **HU.19 Certificados de pago a autores publicados**      | ~ (posible como adjunto/manual, no automatizado)       | ✓ (facturación integrada, reporting financiero) | ✓ (certificado con cantidad y retención según reglas internas) |
-
----
+| Historia de Usuario                                       | OJS (Open Source)                          | MagHub (Comercial)                        | Desarrollo Propio                               |
+| --------------------------------------------------------- | ------------------------------------------ | ----------------------------------------- | ----------------------------------------------- |
+| **HU.01 Autor + docs bancarios (CV/DNI)**                 | ✓ (perfil + adjuntos; faltan bancarios)    | ~ (CRM con adjuntos; no modela bancarios) | ✓ (datos civiles/militares + docs bancarios)    |
+| **HU.02 Artículo + autores + documentos**                 | ✓ (multi-autor, ficheros y metadatos)      | ~ (gestión de contenidos, no académico)   | ✓ (autores múltiples y preservación tipo/orden) |
+| **HU.03 Estados de artículo (ciclo completo)**            | ✓ (workflow configurable)                  | ~ (workflow editorial, no científico)     | ✓ (ciclo trazable configurable)                 |
+| **HU.04 Clasificación artículo (tipo/temática/sección)**  | ✓ (secciones, keywords)                    | ✓ (metadatos configurables)               | ✓ (tipos, secciones, temáticas definidas)       |
+| **HU.05 Alta de consejeros (militares)**                  | ✓ (usuarios revisores, sin perfil militar) | ~ (roles genéricos)                       | ✓ (perfil militar explícito)                    |
+| **HU.06 Asignación consejeros a artículos**               | ✓ (gestión revisores)                      | ~ (workflows de tareas)                   | ✓ (asignación con roles militares)              |
+| **HU.07 Registrar evaluaciones + informe**                | ✓ (formulario revisión + adjuntos)         | ~ (feedback/tarea genérica)               | ✓ (nota, recomendación, adjunto)                |
+| **HU.08 Crear números de revista**                        | ✓ (issues nativos)                         | ✓ (flatplanning / ediciones)              | ✓ (número con control de páginas)               |
+| **HU.09 Asignar artículos a número**                      | ✓ (asociación artículo-issue)              | ✓ (planificación de páginas)              | ✓ (asignación validada por número/páginas)      |
+| **HU.10 Publicar número de revista**                      | ✓ (estado publicado)                       | ✓ (workflow publicación)                  | ✓ (bloqueo edición tras cierre)                 |
+| **HU.11 Consultas avanzadas artículos/autores**           | ✓ (filtros avanzados y exportación)        | ✓ (listados/exportaciones CRM)            | ✓ (búsqueda multicriterio frontend)             |
+| **HU.12 Etiquetas de envío a autores**                    | ~ (plugin externo o CSV)                   | ✓ (módulo circulación etiquetas)          | ✓ (PDF/XLS integrado)                           |
+| **HU.13 Alta suscriptores + suscripciones**               | ~ (usuarios de acceso digital)             | ✓ (gestión completa)                      | ✓ (suscriptor civil/militar con direcciones)    |
+| **HU.14 Pagador distinto de suscriptor**                  | ~ (requiere personalización)               | ✓ (distintos contactos/pagadores)         | ✓ (entidad pagador separada)                    |
+| **HU.15 Estados de suscripción**                          | ~ (acceso online, sin logística)           | ✓ (activa/suspendida/cancelada)           | ✓ (activa/suspendida/vencida)                   |
+| **HU.16 Generar etiquetas suscriptores**                  | ~ (no nativo; requiere plugin)             | ✓ (exportación estándar)                  | ✓ (PDF/XLS con direcciones múltiples)           |
+| **HU.17 Exportar etiquetas PDF/XLS**                      | ~ (plugin/módulo extra)                    | ✓ (plantillas listas)                     | ✓ (generación backend configurable)             |
+| **HU.18 Consulta de suscriptores/suscripciones**          | ~ (consultas básicas)                      | ✓ (consultas y listados)                  | ✓ (consultas detalladas con filtros)            |
+| **HU.19 Certificados de pago a autores publicados**       | ~ (manual o adjunto)                       | ✓ (facturación integrada)                 | ✓ (certificado con retención e importe)         |
+| **HU.20 Exportar certificados PDF/XLS**                   | ~ (sin módulo financiero)                  | ✓ (reportes financieros exportables)      | ✓ (exportación PDF/XLS parametrizada)           |
+| **HU.21 Buscar artículos**                                | ✓ (filtros y búsqueda avanzada)            | ✓ (CRM con búsqueda avanzada)             | ✓ (búsqueda multicampo y temática)              |
+| **HU.22 Buscar autores**                                  | ✓ (usuarios y metadatos)                   | ✓ (CRM contactos)                         | ✓ (filtros por unidad/perfil militar)           |
+| **HU.23 Buscar números de revista**                       | ✓ (issues filtrables)                      | ✓ (flatplan filtrable)                    | ✓ (filtros por año, estado, publicación)        |
+| **HU.24 Consultar observaciones y versiones**             | ✓ (historial artículos)                    | ~ (comentarios simples)                   | ✓ (trazabilidad completa de versiones)          |
+| **HU.25 Panel control de publicación**                    | ~ (estadísticas básicas)                   | ✓ (dashboards)                            | ✓ (panel consolidado)                           |
+| **HU.26 Alta usuarios**                                   | ✓ (creación cuentas)                       | ✓ (usuarios CRM)                          | ✓ (roles y usuarios controlados)                |
+| **HU.27 Asignación de roles**                             | ✓ (roles predefinidos)                     | ✓ (roles CRM configurables)               | ✓ (roles personalizables)                       |
+| **HU.28 Consultar/editar usuarios**                       | ✓ (usuarios admin)                         | ✓ (gestión cuentas CRM)                   | ✓ (edición y auditoría usuarios)                |
+| **HU.29 Configurar secciones de revista**                 | ✓ (secciones nativas)                      | ✓ (configurable por edición)              | ✓ (estructura editorial parametrizada)          |
+| **HU.30 Controlar evaluaciones pendientes**               | ✓ (workflow revisión)                      | ~ (sin control académico)                 | ✓ (alertas y trazabilidad)                      |
+| **HU.31 Panel de informes y estadísticas**                | ✓ (stats básicas)                          | ✓ (reportes visuales)                     | ✓ (reportes configurables)                      |
+| **HU.32 Gestión de credenciales DICODEF / login militar** | ~ (autenticación local)                    | ~ (no soporta federación militar)         | ✓ (integración DICODEF con roles internos)      |
 
 ### Leyenda
 - **✓** → Cobertura nativa  
